Added Content, fixed Gemfile, Guard-live-reload & gitignore

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,49 @@
- <div class="user-details">
-  <h1> My Expertise </h1>
-  <p> {{site.user_description}} </p>
+<div class="user-profile" style="text-align: justify;">
+  <h1 style="text-align: center;">Who am I?</h1>
+<p>
+  <i>TL;DR</i> : Software engineering student by day, infoSec and machine learning enthusiast by night!
+  <br><br>
+  I am a software engineering student at the University of Polytechnique Montreal looking for an internship in the field of information security or machine learning.
+  Always striving to learn new technologies and adventure myself deeper into the world of knowledge. 
+  <br><br>
+  I have studied both the Comptia Security+ and the Network+ certifications and am currently working towards getting my CISSP certification aswell. I have experience with numerous CTFs which have helped me understand a lot about common vulnerabilities, with my speciality being Web Challenges. 
+  <br>The large amounts of workshops as well as conferences that I've attended in the field of cybersecurity also helped! 😅
+  <br><br>
+  Finally, through personal projects I have managed to learn a lot about the vaste world of artificial intelligence, about the numerous technologies that are available nowadays for web-development for both front-end and back-end and finally develop my problem-solving skills." 
+</p>
 </div>
+
+<div class="user-details">
+  <h1> My arsenal: </h1>
+</div>
+
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>DevOps</h2>
+      <i class="devicon-amazonwebservices-original colored"></i>
+      <i class="devicon-git-plain colored"></i>
+      <i class="devicon-docker-plain colored"></i>
+      <i><img width="70px" src="/assets/img/jenkins.png"></i>
     </div>
     <div class="tech">
-      <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
+      <h2>Front-End</h2>
       <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-angularjs-plain colored"></i>
+      <i class="devicon-bootstrap-plain colored"></i> 
+        <i class="devicon-typescript-plain colored"></i>
+    </div>
+    <div class="tech">
+      <h2>Back-End</h2>
+      <i class="devicon-nodejs-plain-wordmark colored"></i>     
+      <i class="devicon-express-original colored"></i>   
+      <i class="devicon-python-plain colored"></i>
+      <i class="devicon-cplusplus-plain colored"></i>  
+      <i class="devicon-java-plain colored"></i>
+      <i class="devicon-mysql-plain colored"></i>  
     </div>
     <div class="tech">
       <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-debian-plain colored"></i>
+      <i><img width="70px" src="/assets/img/burp.png"></i>
     </div>
 </div>
