--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,72 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h1> Some of my projects: </h1>
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <br><br><br><img alt="chess" src="{{ "/assets/img/chess.jpg"" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Talon <br><span style="font-size: 18px;">Neural Network Chess Engine</span><br><span style="font-size: 14px;">December 2019 - Ongoing</span> </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li>C++, UCI, Neural Networks, Search Algorithms</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p> Talon is my third project in the field of machine learning and is by far my favorite project. As it is still ongoing, here is what I've done until now:
+      <ol>
+        <li>Conception of the bitboard using various data structures to test the most efficient ones.</li>
+        <li>Full implementation of the rules of chess within the machine</li>
+        <li>Implementation of Alpha-beta search within the pieces to find the most significant move</li>
+        <li>Much more to come...</li>
+      </ol>
+    
+      Currently, I am also trying to reproduce the engine in TypeScript in order to be able to have it on my website for on-demand access.
+    </p>
   </div>
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="paint" src="{{ "/assets/img/paint.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> Vector Illustrator Web Application <br><span style="font-size: 14px;">January 2020 - April 2020</span></h3>
     <ul>
-      <li> Featured Skills</li>
+      <li>TypeScript, Angular, NodeJS, Express, MongoDB, SVG</li>
+      <li>Git, Agile, Scrum, Quality Assurance & Test driven developement</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>This project is one of my school's integration projects. Since this is ongoing, here are some of the features that it will have:
+      <ol>
+        <li>Responsive UI using CSS and Angular</li>
+        <li>Implementation of functionalities such as drawing using pens, pencils, sprays, drawing shapes and more.</li>
+        <li>Using SVG for vectorial art</li>
+        <li>Development using Agile and Scrum procedures over the course of three sprints</li>
+        <li>Using NodeJs with MongoDB to keep save drawings made on the application</li>
+      </ol>
+    </p>
+    <!-- <a class="project-link" href="#">Check it out</a> -->
   </div>
+</div>
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="paint" src="{{ "/assets/img/roverrobot.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right" style="margin-right: 30px;">
+    <h3> Line tracking rover robot <br><span style="font-size: 14px;">September 2019 - December 2019</span></h3>
+    <ul>
+      <li>C++, Make, GCC/AVR-GCC, GDB, Git, Linux, Electronics & Embedded Systems</li>
+    </ul>
+    <p>
+      Conception of a Two-wheeled line-tracking rover robot using ATMEL's ATMEGA324p Microcontroller
+      
+      Some of my jobs:  
+        <ol>
+          <li>Team leader, keeping my teammates updated using various methods notably a well built TODO list</li>
+          <li>Writing and implementing the library containing the code base for the different components we had to use with our robot, including UV sensors, Digital Interfaces, line-trackers and more</li>
+          <li>Writing various Makefile scripts allowing the code to compile using AVR-GCC, ATMEL's compiler</li>
+        </ol>
+    </p>
+    <a class="project-link" href="https://github.com/StrixSC/Rover-robot">Check it out</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div> </div>
 </div>
