--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -16,7 +16,7 @@
 .header {
   z-index: 1;
   text-align: center;
-  color:#FFF;
+  color:rgb(#aaffaa);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -24,7 +24,7 @@
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   .site-title {
-    font-size: 50px;
+    font-size: 40px;
     display: block;
     line-height: 1;
     color: #FFF;
@@ -56,7 +56,12 @@
       font-size: 20px;
     }
   }
+  
+  .link:hover {
+    color: rgb(0, 225, 200)
+  }
 }
+
 
 .header-icons {
   display: flex;
