Added extra project

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -68,5 +68,9 @@
 </div>
 
 <div class="user-projects">
-  <div> </div>
+  <div style="font-size: 20px; text-align: center;">
+    <p>Some more of my projects can be found on my <a href="https://github.com/StrixSC/"> Github</a>.
+    These include scripts i've used for CTFs along the way as well as some WriteUps from different CTFs. 
+    <br>Also some other random projects that I do when I have some free time!</p>
+  </div>
 </div>
