--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,11 +6,11 @@
     <br><br><br><img alt="chess" src="{{ "/assets/img/chess.jpg"" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Talon <br><span style="font-size: 18px;">Neural Network Chess Engine</span><br><span style="font-size: 14px;">December 2019 - Ongoing</span> </h3>
+    <h3> GNE <br><span style="font-size: 18px;">Neural Network Chess Engine</span><br><span style="font-size: 14px;">December 2019 - Ongoing</span> </h3>
     <ul>
       <li>C++, UCI, Neural Networks, Search Algorithms</li>
     </ul>
-    <p> Talon is my third project in the field of machine learning and is by far my favorite project. As it is still ongoing, here is what I've done until now:
+    <p> GNE is my third project in the field of machine learning and is by far my favorite project. As it is still ongoing, here is what I've done until now:
       <ol>
         <li>Conception of the bitboard using various data structures to test the most efficient ones.</li>
         <li>Full implementation of the rules of chess within the machine</li>
