--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,7 +6,7 @@
     <br><br><br><img alt="chess" src="{{ "/assets/img/chess.jpg"" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> GNE <br><span style="font-size: 18px;">Neural Network Chess Engine</span><br><span style="font-size: 14px;">December 2019 - Ongoing</span> </h3>
+    <h3> GNE <br><span style="font-size: 18px;"> Chess Engine</span><br><span style="font-size: 14px;">December 2019 - Ongoing</span> </h3>
     <ul>
       <li>C++, UCI, Neural Networks, Search Algorithms</li>
     </ul>
