--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,20 +1,5 @@
-<div class="user-profile" style="text-align: justify;">
-  <h1 style="text-align: center;">Who am I?</h1>
-<p>
-  <i>TL;DR</i> : Software engineering student by day, infoSec and machine learning enthusiast by night!
-  <br><br>
-  I am a software engineering student at the University of Polytechnique Montreal looking for an internship in the field of information security or machine learning.
-  Always striving to learn new technologies and adventure myself deeper into the world of knowledge. 
-  <br><br>
-  I have studied both the Comptia Security+ and the Network+ certifications and am currently working towards getting my CISSP certification aswell. I have experience with numerous CTFs which have helped me understand a lot about common vulnerabilities, with my speciality being Web Challenges. 
-  <br>The large amounts of workshops as well as conferences that I've attended in the field of cybersecurity also helped! 😅
-  <br><br>
-  Finally, through personal projects I have managed to learn a lot about the vaste world of artificial intelligence, about the numerous technologies that are available nowadays for web-development for both front-end and back-end and finally develop my problem-solving skills." 
-</p>
-</div>
-
 <div class="user-details">
-  <h1> My arsenal: </h1>
+  <h1> Arsenal: </h1>
 </div>
 
   <div class="user">
