--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -18,7 +18,7 @@
         <li>Much more to come...</li>
       </ol>
     
-      Currently, I am also trying to reproduce the engine in TypeScript in order to be able to have it on my website for on-demand access.
+      Currently, I am also trying to reproduce the engine in TypeScript in order to be able to have it on my website for demo purposes.
     </p>
   </div>
 </div>
@@ -34,9 +34,9 @@
     </ul>
     <p>This project is one of my school's integration projects. Since this is ongoing, here are some of the features that it will have:
       <ol>
-        <li>Responsive UI using CSS and Angular</li>
+        <li>Responsive UI with Angular</li>
         <li>Implementation of functionalities such as drawing using pens, pencils, sprays, drawing shapes and more.</li>
-        <li>Using SVG for vectorial art</li>
+        <li>Using SVG for vectorial illustrations</li>
         <li>Development using Agile and Scrum procedures over the course of three sprints</li>
         <li>Using NodeJs with MongoDB to keep save drawings made on the application</li>
       </ol>
@@ -58,9 +58,8 @@
       
       Some of my jobs:  
         <ol>
-          <li>Team leader, keeping my teammates updated using various methods notably a well built TODO list</li>
           <li>Writing and implementing the library containing the code base for the different components we had to use with our robot, including UV sensors, Digital Interfaces, line-trackers and more</li>
-          <li>Writing various Makefile scripts allowing the code to compile using AVR-GCC, ATMEL's compiler</li>
+          <li>Writing various Makefile scripts allowing the code to compile using AVR-GCC</li>
         </ol>
     </p>
     <a class="project-link" href="https://github.com/StrixSC/Rover-robot">Check it out</a>
