--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,4 +1,4 @@
-<div class="user-details">
+<!-- <div class="user-details">
   <h1> Some of my projects: </h1>
 </div>
 <div class="user-projects">
@@ -73,3 +73,4 @@
     <br>Also some other random projects that I do when I have some free time!</p>
   </div>
 </div>
+ -->
