--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Resume" href="../assets/files/CV.pdf"><i class="icon fa fa-file"></i></a>
+        <a aria-label="Resume" href="../assets/files/CV_NawrasMAmin_En.pdf"><i class="icon fa fa-file"></i></a>
         <a aria-label="Send email" href="mailto: nawrasmamin@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="https://www.twitter.com/S7RIX"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/StrixSC/"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
