--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
 }
 
 #__next {
-    @apply bg-gray-50 dark:bg-black;
+    @apply bg-neutral-100 dark:bg-black;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
