--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,6 +19,11 @@ html {
         @apply bg-gray-50 text-gray-900 dark:bg-black dark:text-gray-100;
         @apply min-h-screen;
     }
+    canvas{
+        text-align: center;
+        margin: 0 auto;
+        display: block;
+      }
 }
 
 @layer components {
