--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,7 @@ html {
 }
 
 #__next {
-    @apply bg-white dark:bg-black;
+    @apply bg-neutral-100 dark:bg-zinc-900;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -16,7 +16,7 @@ html {
 
 @layer base {
     body {
-        @apply bg-gray-50 text-gray-900 dark:bg-black dark:text-gray-100;
+        @apply text-gray-900 dark:text-gray-100;
         @apply min-h-screen;
     }
     canvas {
