--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,10 +8,20 @@ html {
 }
 
 #__next {
-    @apply bg-neutral-100 dark:bg-zinc-900;
+    @apply bg-white dark:bg-gradient-to-b dark:from-zinc-800 dark:to-zinc-900 dark:bg-zinc-900;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+
+.dark #__next {
+    background-color: #101010;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23323232' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.light #__next {
+    //     background-color: #f1f1f1;
+    //     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23cfcfcf' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 @layer base {
