--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,12 +15,12 @@ html {
 }
 
 .dark #__next {
-    background-color: #101010;
+    background-color: #101010 !important;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23323232' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 .light #__next {
-    //     background-color: #f1f1f1;
+    //     background-color: #f1f1f1 !important;
     //     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23cfcfcf' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
@@ -28,6 +28,18 @@ html {
     body {
         @apply text-gray-900 dark:text-gray-100;
         @apply min-h-screen;
+        --codeblock_border_color: #252a30 !important;
+        --codeblock_bg_color: #0d1117 !important;
+        --string: #a5d6ff;
+        --keyword: #ff7b72;
+        --number: #79c0ff;
+        --literal: #79c0ff;
+        --comment: #8b949e;
+        --attr: #79c0ff;
+        --section: red;
+        --built_in: #ffa657;
+        --variable: #79c0ff;
+        --meta: #79c0ff;
     }
     canvas {
         text-align: center;
@@ -39,5 +51,133 @@ html {
 @layer components {
 }
 
-@layer components {
+// Following taken from : https://github.com/highlightjs/highlight.js/blob/main/src/styles/github-dark.css
+.hljs {
+    color: #c9d1d9;
+}
+
+p:has(code) {
+    code {
+        color: #ff7b72 !important;
+        background-color: var(--tw-prose-pre-bg);
+        font-weight: 400;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        padding: 0.33rem;
+        border-radius: 0.5rem;
+    }
+    code::after,
+    code::before {
+        content: '' !important;
+    }
+}
+
+.hljs-doctag,
+.hljs-keyword,
+.hljs-meta .hljs-keyword,
+.hljs-template-tag,
+.hljs-template-variable,
+.hljs-type,
+.hljs-variable.language_ {
+    /* prettylights-syntax-keyword */
+    color: #ff7b72;
+}
+
+.hljs-title,
+.hljs-title.class_,
+.hljs-title.class_.inherited__,
+.hljs-title.function_ {
+    /* prettylights-syntax-entity */
+    color: #d2a8ff;
+}
+
+.hljs-attr,
+.hljs-attribute,
+.hljs-literal,
+.hljs-meta,
+.hljs-number,
+.hljs-operator,
+.hljs-variable,
+.hljs-selector-attr,
+.hljs-selector-class,
+.hljs-selector-id {
+    /* prettylights-syntax-constant */
+    color: #79c0ff;
+}
+
+.hljs-regexp,
+.hljs-string,
+.hljs-meta .hljs-string {
+    /* prettylights-syntax-string */
+    color: #a5d6ff;
+}
+
+.hljs-built_in,
+.hljs-symbol {
+    /* prettylights-syntax-variable */
+    color: #ffa657;
+}
+
+.hljs-comment,
+.hljs-code,
+.hljs-formula {
+    /* prettylights-syntax-comment */
+    color: #8b949e;
+}
+
+.hljs-name,
+.hljs-quote,
+.hljs-selector-tag,
+.hljs-selector-pseudo {
+    /* prettylights-syntax-entity-tag */
+    color: #7ee787;
+}
+
+.hljs-subst {
+    /* prettylights-syntax-storage-modifier-import */
+    color: #c9d1d9;
+}
+
+.hljs-section {
+    /* prettylights-syntax-markup-heading */
+    color: #1f6feb;
+    font-weight: bold;
+}
+
+.hljs-bullet {
+    /* prettylights-syntax-markup-list */
+    color: #f2cc60;
+}
+
+.hljs-emphasis {
+    /* prettylights-syntax-markup-italic */
+    color: #c9d1d9;
+    font-style: italic;
+}
+
+.hljs-strong {
+    /* prettylights-syntax-markup-bold */
+    color: #c9d1d9;
+    font-weight: bold;
+}
+
+.hljs-addition {
+    /* prettylights-syntax-markup-inserted */
+    color: #aff5b4;
+    background-color: #033a16;
+}
+
+.hljs-deletion {
+    /* prettylights-syntax-markup-deleted */
+    color: #ffdcd7;
+    background-color: #67060c;
+}
+
+.hljs-char.escape_,
+.hljs-link,
+.hljs-params,
+.hljs-property,
+.hljs-punctuation,
+.hljs-tag {
+    /* purposely ignored */
 }
