--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -6,6 +6,12 @@ body {
     padding: 2em 0;
   }
   
+  .i {
+    position: absolute;
+    color: transparent;
+    display: none;
+  }
+
   .resume {
     max-width: 50em;
     padding: 0 2em;
